Fixed CSS positioning of full screen player and overflow to avoid scroll bar

--- a/uniboard-player/stylesheets/ubloader-embed.css
+++ b/uniboard-player/stylesheets/ubloader-embed.css
@@ -10,3 +10,7 @@
  left: none;
  right: none;
 }
+
+body {
+ overflow: visible;
+}
