--- a/uniboard-player/stylesheets/ubloader-fs.css
+++ b/uniboard-player/stylesheets/ubloader-fs.css
@@ -1,10 +1,14 @@
 
 #sankoreplayer {
   display: block;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   top: 0;
   left: 0;
   right: 0;
+}
+
+body {
+  overflow: hidden;
 }
 
